tests/unit-fail-compilation/paramStorage.c.ref
paramStorage.c:1:1: error: Function parameter appears with storage class other than register.
  Constraint violation (CV-TDG5). See C11 sec. 6.7.6.3:2
Translation failed (config dumped). Run kcc -d paramStorage.c to see commands run.
